--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "dotenv": "^5.0.0",
     "ethereumgasstation": "0.0.1",
     "express": "^4.16.3",
-    "web3": "^1.0.0-beta2",
+    "web3": "1.0.0-beta.30",
     "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "eslint": "^4.18.1",
     "eslint-config-google": "^0.9.1",
     "mocha": "^5.0.1",
